# Freecell

./: .gitignore  Freecell.sln  README.md
Freecell/: Bouton.cpp  Bouton.h  CMakeLists.txt  Carte.cpp  Carte.h  CarteKamil.cpp  CarteKamil.h  ClassDiagram.cd  Couleurs.h  FenetrePrincipale.cpp  FenetrePrincipale.h  FenetrePrincipale_affichage.cpp  FenetrePrincipale_menu.cpp  FenetrePrincipale_menuSauvegardeChargement.cpp  Fonctions.cpp  Fonctions.h  Freecell.cpp  Freecell.vcxproj  Freecell.vcxproj.filters  Liste.cpp  Liste.h  PileCarte.cpp  PileCarte.h  essai.txt  pch.h  pileCarte.cpp  pileCarte.h  settings.txt  stb_image.h  stb_implement.cpp  stb_implement.h
Freecell/icones_et_boutons/: bouton_chargerPartie.ppm  bouton_nouvellePartie.ppm  bouton_quitter.ppm
Freecell/imageCarte/: blank.ppm
